--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Ajay-hum.github.io/Travel and Tours website",
+  "homepage": "https://Ajay-hum.github.io/Travel-and-Tours-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
